# pybot0724

./: .gitignore  README.md  production.py  pyproject.toml  start.sh
.github/workflows/: deploy.yml
bot/: __init__.py  attack_village.py  bot.py  cli.py  config.py  construction.py  data.db  database.py  debug.py  fetch_all_villages.py  game.db  login.py  map_finder.py  playwright_storage.py  presets.py  production.py  session_manager.py  settling.py  storage.py  tasks.py  troop.training.py  troop_training.py  tui.py  utils.py  village.py
myenv/: pyvenv.cfg
